# pyEllipse

./: .gitignore  README-01K7DAG0C20C3QBKAXN7ZD1VRG.md  README.md  confidence_ellipse.py  coordinates.py  examples.ipynb  hotelling_coord.py  parameters.py  pyproject.toml  setup.py
Tests/: __init__.py
docs/: index.html  pyEllipse.html  search.js
docs/pyEllipse/: confidence_ellipse.html  hotelling_coordinates.html  hotelling_parameters.html
pyEllipse/: __init__.py  confidence_ellipse.py  hotelling_coordinates.py  hotelling_parameters.py
scripts/: generate_readme_plots.py
