[tool.poetry]
name = “pyEllipse"
version = "0.1.0"
description = “Tools for creating and analyzing confidence ellipses, including Hotelling's T-squared ellipses for multivariate statistical analysis and data visualization.”
authors = [“Christian L. Goueguel <christian.goueguel@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ChristianGoueguel/pyEllipse"
repository = "https://github.com/ChristianGoueguel/pyEllipse"
documentation = "https://pyellipse.readthedocs.io"
keywords = ["statistics", "confidence-ellipse", “Hotelling", "multivariate", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]
packages = [{include = “pyellipse", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.0"
scipy = "^1.7.0"
matplotlib = "^3.5.0"
pandas = {version = "^1.3.0", optional = true}
seaborn = {version = "^0.11.0", optional = true}
plotly = {version = "^5.0.0", optional = true}

[tool.poetry.extras]
plotting = ["seaborn", "plotly"]
dataframe = ["pandas"]
all = ["pandas", "seaborn", "plotly"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
pre-commit = "^3.3.0"
sphinx = "^7.1.0"
sphinx-rtd-theme = "^1.3.0"
jupyter = "^1.0.0"
notebook = "^7.0.0"

[tool.poetry.group.test.dependencies]
pytest-xdist = "^3.3.0"
hypothesis = "^6.82.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Tool configurations
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src/pyellipse --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
# pyproject.toml
[tool.pyright]
exclude = ["scripts/generate_readme_plots.py"]
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]